--- a/src/app/component/navigation/navigation.component.html
+++ b/src/app/component/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item *ngFor="let routingLink of getRoutingLinks()"
-         href="{{'/' + routingLink.url}}">{{routingLink.routingName}}</a>
+         href="{{'/' + routingLink.URL}}">{{routingLink.ROUTING_NAME}}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
